Refactor `ActionList` by adding `@Setter` to `playerID`, removing redundant `setPlayerID` method, and improving type casting and lambda readability.