@@ -4,18 +4,20 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import lombok.Setter;
 
 public class ActionList {
     private final Map<Integer, List<Action>> actionsMap = new HashMap<>();
     private final List<Action> actionsList = new ArrayList<>();
     private int nrOfActionsCalled = 0;
     private boolean missedAction = false;
+    @Setter
     private int playerID = 0;
 
     public void addAction(Action action) {
         actionsList.add(action);
         actionsMap
-            .computeIfAbsent(action.getClock(), k -> new ArrayList<>())
+            .computeIfAbsent(action.getClock(), _ -> new ArrayList<>())
             .add(action);
     }
 
@@ -23,14 +25,14 @@ public class ActionList {
         List<Action> actionsOfClock = actionsMap.containsKey(clock)
             ? List.copyOf(actionsMap.get(clock))
             : List.of();
-        if(!actionsOfClock.isEmpty() && actionsOfClock.get(0).getIndex() > nrOfActionsCalled){
+        if(!actionsOfClock.isEmpty() && actionsOfClock.getFirst().getIndex() > nrOfActionsCalled){
             missedAction = true;
             if(actionsList.get(nrOfActionsCalled).getPlayerId() == playerID){
                 Constants.actionOffset++;
                 System.out.println("you missed your own action, action offset is now set to "+Constants.actionOffset+"game ticks");
             }else{
                 Constants.timeOffset = Constants.timeOffset + (500000000/Constants.TARGET_FPS);
-                double temp = Constants.timeOffset/(1000000000/Constants.TARGET_FPS);
+                double temp = (double) Constants.timeOffset /((double) 1000000000 /Constants.TARGET_FPS);
                 System.out.println(Constants.timeOffset);
                 System.out.println("you missed another players action, your clock offset is now set to "+temp+" game ticks");
             }
@@ -46,9 +48,5 @@ public class ActionList {
 
     public void fixedMissedAction(){
         missedAction = false;
-    }
-
-    public void setPlayerID(int playerID){
-        this.playerID = playerID;
     }
 }
